   arguments indicating where the callee should go after the caller is hung up,
   or without options specified, the priority after the Queue will be used.

 * Added new option log_member_name_as_agent, which will cause the membername to
   be logged in the agent field for ADDMEMBER and REMOVEMEMBER queue events if a
   state_interface has been set.


SayUnixTime
------------------
 * Added 'j' option to SayUnixTime. SayUnixTime no longer auto jumps to extension
   when receiving DTMF.  Use the 'j' option to enable extension jumping. Also
   changed arguments to SayUnixTime so that every option is truly optional even
   when using multiple options (so that j option could be used without having to
   manually specify timezone and format) There are other benefits, e.g., format
   can now be used without specifying time zone as well.


Voicemail
------------------
 * Addition of the VM_INFO function - see Function changes.

 * The imapserver, imapport, and imapflags configuration options can now be
   overriden on a user by user basis.

 * When voicemail plays a message's envelope with saycid set to yes, when
   reaching the caller id field it will play a recording of a file with the same
   base name as the sender's callerid if there is a similarly named file in
   <astspooldir>/recordings/callerids/

 * Voicemails now contains a unique message identifier "msg_id", which is stored
   in the message envelope with the sound files.  IMAP backends will now store
   the message identifiers with a header of "X-Asterisk-VM-Message-ID".  ODBC
   backends will store the message identifier in a "msg_id" column.  See
   UPGRADE.txt for more information.

 * Added VoiceMailPlayMsg application.  This application will play a single
   voicemail message from a mailbox.  The result of the application, SUCCESS or
   FAILED, is stored in the channel variable VOICEMAIL_PLAYBACKSTATUS.


Functions
------------------